php-3-tier/k8s-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: dpaktamang/php-3-tier-be
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: backend
          mountPath: /var/www/html
      volumes:
      - name: backend
        hostPath:
          path: /home/ubuntu/devops-430/php-3-tier/api
          type: DirectoryOrCreate
